# new-feature

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CONVENTIONS.md  README.md  main.py  mkdocs.yml  prek.toml  pyproject.toml
.claude/: agents.red-green-tdd.md  hookify.taste-enforcer.md
.codex/: hooks.json
.github/workflows/: deploy-docs.yml  publish.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PUBLISHING.md  QUALITY.md
scripts/: generate_api_docs.py
scripts/pre_commit_hooks/: check_exception_handling.py  check_file_length.py  check_print_statements.py  check_private_test_imports.py  check_timeless_comments.py  fix_future_annotations.py
scripts/prek_hooks/: check_exception_handling.py  check_file_length.py  check_print_statements.py  check_private_test_imports.py  check_timeless_comments.py  fix_future_annotations.py
src/new_feature/: __init__.py  __main__.py  agent.py  agent_hook.py  allocator.py  app.py  atomic_file.py  cli.py  cli_parser.py  codex_hook.py  codex_install.py  commands.py  config.py  errors.py  feature_state.py  git.py  gitignore.py  help_text.py  hook_install.py  hook_policy.py  lifecycle.py  manifest.py  recovery.py  slug.py  worktree_guidance.py
tests/: conftest.py  test_agent_hooks.py  test_agents.py  test_app.py  test_codex_hook.py  test_config.py  test_core.py  test_hardening.py  test_hook_install.py  test_hook_policy.py  test_lifecycle.py  test_strict_coverage.py
