[project]
name = "new-feature"
version = "0.1.0"
description = "Create isolated feature worktrees with allocated runtime environments."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filelock>=3.16",
    "tomli-w>=1.0",
]

[project.scripts]
new-feature = "new_feature.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
